--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 <button class="clr-btn" onclick="clear_canvas()">Clear</button>
             </div>
             <div class="lower-bar">
-                <button class="dl-btn">Download</button>
+                <button class="dlBtn" id="dlBtn" onclick="dlCanvas"><a id="dllink" href="#" download>Download</a></button>
             </div>
         </div>
 
